# PSW-Unipoly

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/QT_Unipoly/: CMakeLists.txt  TcpClient.cpp  TcpClient.hpp  TcpServer.cpp  TcpServer.hpp  aboutPage.qml  gameMap_client.qml  gameMap_host.qml  gameUI.cpp  gameinit.cpp  gameinit.h  gameinit_client.cpp  gameinit_client.h  hostGame.qml  instructionsPage.qml  joinGame.qml  lobbyMenu_client.qml  lobbyMenu_host.qml  mainMenu.qml  splash.qml  viewer.qml
src/QT_Unipoly/include/logic/: Board.h  Cards.h  Dice.h  Faculty.h  Game.h  Player.h  Property.h  Server.h  Station.h  Utility.h
src/QT_Unipoly/logic/: Board.cpp  Cards.cpp  Dice.cpp  Faculty.cpp  Game.cpp  Player.cpp  Property.cpp  Station.cpp  Utility.cpp
unit_test/: CMakeLists.txt  unit_test.cpp
